@@ -1,5 +1,10 @@
 2010-05-01  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* kern/mm.c (grub_mm_init_region): Check for region size after aligning
+	pointers.
+
+2010-05-01  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* kern/mm.c (grub_real_malloc): Fix size calculation when extra == 0.
 
 2010-05-01  Christian Franke  <franke@computer.org>
